--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mean lean muscle</title>
     <link rel="stylesheet" href="css/templejt.css">
+    
 </head>
 <body>
     <div class="container">
@@ -13,15 +14,25 @@
             <h1><a href="index.html"><img src="images/logo.jpg" alt="">MEAN LEAN MUSCLE</a></h1>
             
         </div>
+        <div class="hamburger">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </div>
         <nav class="meni">
+                <div class="hamburger">
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                    </div>
             <ul>
                 <li><a href="#">Početna</a></li>
                 <li><a href="#">Forum</a></li>
                 <li><a href="#">Vesti</a></li>
                 <li><a href="#">Fitnes centri</a></li>
                 <li><a href="#">Proizvodi</a></li>
-                <li><a href="#">O nama</a></li>
-                <li><a href="#">Kontakt</a></li>
+                <li><a href="O_nama.html">O nama</a></li>
+                <li><a href="Kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
         <br>
